updated 404 page, fixed text box alignment on contact buttons

--- a/style.css
+++ b/style.css
@@ -165,13 +165,13 @@ a:active {
   height: auto;
   display: block;
   position: fixed;
-  top: 25px;
-  left: 25px;
+  top: 35px;
+  left: 35px;
   z-index: 10;
 }
 
 .logo img {
-  display: none;
+  display: block;
   width: 100%;
   height: auto;
 }
